# tl-stereo

./: .gitignore  CMakeLists.txt  README.md  TL_stereo.cc  vis.mac  vis_file.mac
analysis/: runMT.screen.sh  runMT.sh  signal.cc  sim_ana.py
include/: Const.hh  DetectorConstruction.h  EventAction.h  Hit.h  HitDataStructure.hh  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h  SensitiveDetector.h  StackingAction.hh  SteppingAction.h  VolumeStructures.h  muon_gen.h
src/: DetectorConstruction.cpp  EventAction.cpp  Hit.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SensitiveDetector.cpp  SteppingAction.cpp  muon_gen.cpp
